[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arga-py-sdk"
version = "0.1.2"
description = "Python SDK for the Arga API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Arga Labs", email = "support@argalabs.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "httpx-sse>=0.4.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[project.urls]
Documentation = "https://docs.argalabs.com"
Repository = "https://github.com/ArgaLabs/arga-python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/arga_sdk"]
